# squirrels

./: .cursorignore  .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
database/: create_sqlite_db.py  test.db
database/csv_files/: lu_tickers.csv  stock_data.csv
database/sample_database/: create_db.py  sample_database.db
database/seattle_weather/: seattle-weather.csv  seattle_weather.db
database_elt/expenses/: .gitignore  create-expenses.py  create-lookups.py  create_db.py  sample-transactions.csv
database_elt/sample_database/: create_db.py  sample-transactions.csv
database_elt/seattle_weather/: create_db.py
dateutils/: __init__.py  _enums.py  _implementation.py  types.py
docs/: docs.json  getting-started.md  index.md  index.mdx  intro.mdx  overview.md  quickstart.mdx  styles.css  tutorial.mdx
docs/cli-guide/: run.md
docs/concepts/: architecture.mdx  connections.mdx  datasets.mdx  mcp-server.mdx  models.mdx  parameters.mdx  vdl.mdx
docs/guides/: mcp-clients.mdx
docs/project/: dashboards.mdx  env-vars.mdx  macros.mdx  seeds.mdx  squirrels-yml.mdx  structure.mdx
docs/project/models/: builds.mdx  dbviews.mdx  federates.mdx  sources.mdx
docs/project/pyconfigs/: connections.mdx  context.mdx  parameters.mdx  user.mdx
docs/references/api/: tba.mdx
docs/references/cli/: build.mdx  compile.mdx  deps.mdx  duckdb.mdx  get-file.mdx  index.mdx  init.mdx  new.mdx  run.mdx
docs/references/python/: index.mdx  squirrelsproject.mdx  tba.mdx
docs/releases/: v0-5-0.mdx  v0-5-1.mdx  v0-5-2.mdx  v0-5-3.mdx  v0-5-4.mdx
docs/snippets/: variables.mdx
docs/snippets/releases/: intro1.mdx
docs/start/: index.mdx  quickstart.mdx  tutorial.mdx
docs/user-guide/: parameters.md  squirrels-manifest.md
sample_project/: .gitignore  functions.py  parameter_options.py  squirrels.yaml  squirrels_explained.yaml
sample_project/datasets/: sample_lu_data.csv
sample_project/datasets/stock_price_history/: context.py  final_view.py  final_view.sql.j2  parameters.py  selections.cfg  ticker_history.sql.j2
squirrels/: __init__.py  _api_response_models.py  _api_server.py  _auth.py  _authenticator.py  _command_line.py  _compile_prompts.py  _connection_set.py  _connection_set_io.py  _constants.py  _credentials_manager.py  _dashboard_types.py  _dashboards.py  _dashboards_io.py  _data_sources.py  _dataset_types.py  _env_vars.py  _environcfg.py  _exceptions.py  _initializer.py  _logging.py  _manifest.py  _mcp_server.py  _model_builder.py  _model_configs.py  _model_queries.py  _models.py  _module_loader.py  _package_loader.py  _parameter_configs.py  _parameter_options.py  _parameter_set.py  _parameter_sets.py  _parameters.py  _project.py  _py_module.py  _renderer.py  _request_context.py  _seeds.py  _sources.py  (+34 more)
squirrels/_api_routes/: __init__.py  auth.py  base.py  dashboards.py  data_management.py  datasets.py  oauth2.py  project.py
squirrels/_arguments/: _init_time_args.py  _run_time_args.py  init_time_args.py  run_time_args.py
squirrels/_package_data/base_project/: .env  .env.example  connections.yml  duckdb_init.sql  gitignore  parameters.yml  squirrels.yml.j2
squirrels/_package_data/templates/: dataset_results.html  oauth_login.html  squirrels_studio.html
squirrels/_schemas/: auth_models.py  query_param_models.py  response_models.py
squirrels/arguments/: init_time_args.py  run_time_args.py
squirrels/base_project/: .gitignore  squirrels.yaml
squirrels/base_project/database/: seattle_weather.db
squirrels/configs/: data_sources.py  parameter_options.py  parameter_set.py  parameters.py
squirrels/package_data/assets/: index.css  index.js
squirrels/package_data/base_project/: .env  .env.example  .env.local  (+19 more)
squirrels/param_configs/: data_sources.py  parameter_options.py  parameter_set.py  parameters.py
tests/: _api_server_test.py  _auth_test.py  _authenticator_test.py  _connection_set_test.py  _credentials_manager_test.py  _data_sources_test.py  _environcfg_test.py  _manifest_test.py  _max_result_rows_test.py  _mcp_server_test.py  _model_builder_test.py  _model_configs_test.py  _models_basic_test.py  _models_test.py  _module_loader_test.py  _parameter_options_test.py  _parameter_set_test.py  _parameters_test.py  _renderer_test.py  _seeds_test.py  _sources_test.py  _utils_test.py  api_server_test.py  conftest.py  connection_set_test.py  credentials_manager_test.py  data_sources_test.py  dateutils_test.py  manifest_test.py  module_loader_test.py  parameter_options_test.py  parameter_set_test.py  parameters_test.py  renderer_test.py  test_db_conn.py  test_parameter_configs.py  test_profile_manager.py
tests/_arguments/: run_time_args_test.py
tests/_parameter_configs_tests/: _parameter_configs_test.py  _parameter_sets_test.py  conftest.py
tests/archive/: _renderer.py  parameters.py  parent_parameters.py
tests/arguments/: run_time_args_test.py
tests/configs/: data_sources_test.py  parameter_set_test.py  parameters_test.py
tests/param_configs/: data_sources_test.py  parameter_set_test.py  parameters_test.py  parent_parameters.py
tests/parameter_configs_tests/: _parameter_configs_test.py  _parameter_sets_test.py  _user_class.py  conftest.py
tests/parameters/: conftest.py
(+130 files in other folders)
