[tool.poetry]
name = "squirrels"
version = "0.5.0rc0"
description = "Squirrels - API Framework for Data Analytics"
license = "Apache-2.0"
authors = ["Tim Huang <tim.yuting@hotmail.com>"]
readme = "README.md"
homepage = "https://squirrels-analytics.github.io"
repository = "https://github.com/squirrels-analytics/squirrels"
documentation = "https://squirrels-analytics.github.io"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.scripts]
squirrels = "squirrels._command_line:main"
sqrl = "squirrels._command_line:main"

[tool.poetry.dependencies]
python = "^3.10"
cachetools = "^5.3.2"
fastapi = "^0.112.1"
gitpython = "^3.1.41"
inquirer = "^3.2.1"
jinja2 = "^3.1.3"
matplotlib = "^3.8.3"
networkx = "^3.2.1"
pandas = "^2.1.4"
pydantic = "^2.8.2"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.25"
uvicorn = "^0.30.6"
polars = "^1.14.0"
pyarrow = "^18.0.0"
duckdb = "^1.1.3"
sqlglot = "^25.32.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
plotly = "^5.24.0"
psycopg2-binary = "^2.9.10"
adbc-driver-postgresql = "^1.3.0"
adbc-driver-sqlite = "^1.3.0"
connectorx = "^0.4.0"
faker = "^33.1.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
