[project]
name = "squirrels"
version = "0.5.0b1"
description = "Squirrels - API Framework for Data Analytics"
authors = [{ name = "Tim Huang", email = "tim.yuting@hotmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cachetools>=5.3.2,<6",
    "fastapi>=0.112.1,<1",
    "gitpython>=3.1.41,<4",
    "inquirer>=3.2.1,<4",
    "jinja2>=3.1.3,<4",
    "matplotlib>=3.8.3,<4",
    "networkx>=3.2.1,<4",
    "pandas>=2.1.4,<3",
    "pydantic>=2.8.2,<3",
    "pyjwt>=2.8.0,<3",
    "python-multipart>=0.0.9,<1",
    "pyyaml>=6.0.1,<7",
    "sqlalchemy>=2.0.25,<3",
    "uvicorn>=0.30.6,<1",
    "polars>=1.14.0,<2",
    "pyarrow>=19.0.1",
    "duckdb>=1.1.3,<2",
    "sqlglot>=26.12.1",
    "bcrypt>=4.0.1,<5",
    "python-dotenv>=1.0.1,<2",
    "libpass>=1.9.0,<2",
]

[project.urls]
Homepage = "https://squirrels-analytics.github.io"
Repository = "https://github.com/squirrels-analytics/squirrels"
Documentation = "https://squirrels-analytics.github.io"

[project.scripts]
squirrels = "squirrels._command_line:main"
sqrl = "squirrels._command_line:main"

[dependency-groups]
test = ["pytest>=7.4.4,<8"]
dev = [
    "ipykernel>=6.29.4,<7",
    "plotly>=5.24.0,<6",
    "psycopg2-binary>=2.9.10,<3",
    "adbc-driver-postgresql>=1.3.0,<2",
    "adbc-driver-sqlite>=1.3.0,<2",
    "connectorx>=0.4.0,<0.5",
    "faker>=33.1.0,<34",
    "tqdm>=4.67.1,<5",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
