[project]
name = "squirrels"
version = "0.6.0.dev1"
description = "Squirrels - API Framework for Data Analytics"
authors = [{ name = "Tim Huang", email = "tim.yuting@hotmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cachetools>=5.3.2",
    "fastapi>=0.112.1",
    "gitpython>=3.1.41",
    "inquirer>=3.2.1",
    "jinja2>=3.1.3",
    "matplotlib>=3.8.3",
    "pandas>=2.1.4",
    "pydantic>=2.8.2",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.25",
    "uvicorn>=0.30.6",
    "polars>=1.14.0",
    "pyarrow>=19.0.1",
    "duckdb>=1.4.0",
    "sqlglot>=26.12.1",
    "bcrypt>=4.0.1",
    "python-dotenv>=1.0.1",
    "libpass>=1.9.0",
    "authlib>=1.5.2",
    "itsdangerous>=2.2.0",
    "fastmcp>=2.13.0.2",
]

[project.urls]
Homepage = "https://squirrels-analytics.github.io"
Repository = "https://github.com/squirrels-analytics/squirrels"
Documentation = "https://squirrels-analytics.github.io"

[project.scripts]
squirrels = "squirrels._command_line:main"
sqrl = "squirrels._command_line:main"

[dependency-groups]
test = ["pytest>=7.4.4"]
dev = [
    "ipykernel>=6.29.4",
    "plotly>=5.24.0",
    "psycopg2-binary>=2.9.10",
    "adbc-driver-postgresql>=1.3.0",
    "adbc-driver-sqlite>=1.3.0",
    "connectorx>=0.4.0",
    "faker>=33.1.0",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.sdist]
include = ["squirrels", "dateutils"]

[tool.hatch.build.targets.wheel]
include = ["squirrels", "dateutils"]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
